--- a/LINQToTTree/CmdTFileParser/CmdTFileParser.csproj
+++ b/LINQToTTree/CmdTFileParser/CmdTFileParser.csproj
@@ -37,7 +37,7 @@
     <Reference Include="libCoreWrapper, Version=2.2.4255.5523, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libCoreWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libGrafWrapper">
+    <Reference Include="libGrafWrapper, Version=2.2.4255.6238, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.2\lib\net40\libGrafWrapper.dll</HintPath>
     </Reference>
     <Reference Include="libHistWrapper, Version=2.2.4255.5877, Culture=neutral, processorArchitecture=x86">
@@ -46,7 +46,7 @@
     <Reference Include="libMathCoreWrapper, Version=2.2.4255.5574, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libMathCoreWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libNetWrapper">
+    <Reference Include="libNetWrapper, Version=2.2.4255.5882, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.2\lib\net40\libNetWrapper.dll</HintPath>
     </Reference>
     <Reference Include="libPhysicsWrapper, Version=2.2.4255.5860, Culture=neutral, processorArchitecture=x86">
@@ -55,7 +55,7 @@
     <Reference Include="libRIOWrapper, Version=2.2.4255.5712, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libRIOWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libThreadWrapper">
+    <Reference Include="libThreadWrapper, Version=2.2.4255.5594, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libThreadWrapper.dll</HintPath>
     </Reference>
     <Reference Include="libTreePlayerWrapper, Version=2.2.4255.6380, Culture=neutral, processorArchitecture=x86">
