--- a/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
+++ b/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
@@ -55,29 +55,23 @@
     <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="libCoreWrapper, Version=2.5.4575.24420, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Dynamic-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libCoreWrapper.dll</HintPath>
+    <Reference Include="libCoreWrapper">
+      <HintPath>..\packages\ROOTNET-Dynamic-v5.30.01.win32.vc10.2.5\lib\net40\libCoreWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libHistWrapper, Version=2.5.4575.24493, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libHistWrapper.dll</HintPath>
+    <Reference Include="libHistWrapper">
+      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.5\lib\net40\libHistWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libMathCoreWrapper, Version=2.5.4575.24431, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libMathCoreWrapper.dll</HintPath>
+    <Reference Include="libMathCoreWrapper">
+      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.5\lib\net40\libMathCoreWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libPhysicsWrapper, Version=2.5.4575.24435, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libPhysicsWrapper.dll</HintPath>
+    <Reference Include="libPhysicsWrapper">
+      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.5\lib\net40\libPhysicsWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libRIOWrapper, Version=2.5.4575.24462, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libRIOWrapper.dll</HintPath>
+    <Reference Include="libRIOWrapper">
+      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.5\lib\net40\libRIOWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libThreadWrapper, Version=2.5.4575.24439, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libThreadWrapper.dll</HintPath>
+    <Reference Include="libThreadWrapper">
+      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.5\lib\net40\libThreadWrapper.dll</HintPath>
     </Reference>
     <Reference Include="Remotion.Linq, Version=1.13.102.2, Culture=neutral, PublicKeyToken=fee00910d6e5f53b, processorArchitecture=MSIL">
       <HintPath>..\Libraries\Remotion\Remotion.Linq.dll</HintPath>
@@ -90,9 +84,8 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="WrapperPlumbingLibrary, Version=2.2.4575.24325, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Dynamic-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\WrapperPlumbingLibrary.dll</HintPath>
+    <Reference Include="WrapperPlumbingLibrary">
+      <HintPath>..\packages\ROOTNET-Dynamic-v5.30.01.win32.vc10.2.5\lib\net40\WrapperPlumbingLibrary.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
