--- a/LINQToTTree/LINQToTTreeLib.Tests/packages.config
+++ b/LINQToTTree/LINQToTTreeLib.Tests/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NVelocity" version="1.0.3" />
-  <package id="ROOTNET-Core-v5.34.01.win32.vc10" version="2.5" targetFramework="net40" />
-  <package id="ROOTNET-Dynamic-v5.34.01.win32.vc10" version="2.5" targetFramework="net40" />
-  <package id="ROOTNET-Tree-v5.34.01.win32.vc10" version="2.5" targetFramework="net40" />
+  <package id="ROOTNET-Core-v5.30.01.win32.vc10" version="2.5" targetFramework="net40" />
+  <package id="ROOTNET-Dynamic-v5.30.01.win32.vc10" version="2.5" targetFramework="net40" />
+  <package id="ROOTNET-PROOF-v5.30.01.win32.vc10" version="2.5" targetFramework="net40" />
+  <package id="ROOTNET-Tree-v5.30.01.win32.vc10" version="2.5" targetFramework="net40" />
 </packages>
