--- a/LINQToTTree/LINQToTreeHelpers.Tests/packages.config
+++ b/LINQToTTree/LINQToTreeHelpers.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NVelocity" version="1.0.3" />
-  <package id="ROOTNET-Core-v5.34.01.win32.vc10" version="2.5" targetFramework="net40" />
-  <package id="ROOTNET-Dynamic-v5.34.01.win32.vc10" version="2.5" targetFramework="net40" />
+  <package id="ROOTNET-Core-v5.32.04.win32.vc10" version="2.5" targetFramework="net40" />
+  <package id="ROOTNET-Dynamic-v5.32.04.win32.vc10" version="2.5" targetFramework="net40" />
+  <package id="ROOTNET-Tree-v5.32.04.win32.vc10" version="2.5" targetFramework="net40" />
 </packages>
