--- a/LINQToTTree/TTreeParser.Tests/TTreeParser.Tests.csproj
+++ b/LINQToTTree/TTreeParser.Tests/TTreeParser.Tests.csproj
@@ -108,6 +108,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="t_ArrayAnalyzer.cs" />
+    <Compile Include="t_NonSplitObjects.cs" />
     <Compile Include="t_ParseTTree.cs" />
     <Compile Include="t_TemplateParser.cs" />
     <Compile Include="t_Utils.cs" />
@@ -144,6 +145,9 @@
     <None Include="EVNT-short.root">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <Content Include="short-nonsplit.root">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
