--- a/LINQToTTree/LINQToTreeHelpers.Tests/LINQToTreeHelpers.Tests.csproj
+++ b/LINQToTTree/LINQToTreeHelpers.Tests/LINQToTreeHelpers.Tests.csproj
@@ -123,6 +123,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="t_DataSetFinder.cs" />
+    <Compile Include="t_FutureUtils.cs" />
     <Compile Include="t_PlottingUtils.cs" />
     <Compile Include="t_ROOTUtils.cs" />
   </ItemGroup>
