--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -262,6 +262,7 @@
     <Compile Include="Utils\FileUtils.cs" />
     <Compile Include="Utils\GeneratedCodeHelpers.cs" />
     <Compile Include="Utils\ObjectHashCalculator.cs" />
+    <Compile Include="Utils\QueryModelUtils.cs" />
     <Compile Include="Utils\QVResultOperators.cs" />
     <Compile Include="Utils\StatementUtils.cs" />
     <Compile Include="Utils\StringUtils.cs" />
