--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -209,6 +209,7 @@
     <Compile Include="QueryVisitors\PropertyExpressionTransformer.cs" />
     <Compile Include="QueryVisitors\QueryVisitor.cs" />
     <Compile Include="QueryVisitors\FormattingQueryVisitor.cs" />
+    <Compile Include="relinq\TakeSkipExpressionNode.cs" />
     <Compile Include="ResultOperators\ROGroup.cs" />
     <Compile Include="Statements\StatementLoopOverGroupItems.cs" />
     <Compile Include="Statements\StatementLoopOverGroups.cs" />
