--- a/LINQToTTree/LINQToTreeHelpers/packages.config
+++ b/LINQToTTree/LINQToTreeHelpers/packages.config
@@ -3,9 +3,14 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net471" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net471" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net471" />
+  <package id="Nito.AsyncEx.Coordination" version="5.0.0-pre-05" targetFramework="net471" />
+  <package id="Nito.AsyncEx.Tasks" version="5.0.0-pre-05" targetFramework="net471" />
+  <package id="Nito.Collections.Deque" version="1.0.4" targetFramework="net471" />
+  <package id="Nito.Disposables" version="1.2.3" targetFramework="net471" />
   <package id="Remotion.Linq" version="2.0.3-x-009-160302-230435" targetFramework="net471" />
   <package id="ROOT.NET.Core" version="5.34.36.13" targetFramework="net471" />
   <package id="ROOT.NET.Dynamic" version="5.34.36.13" targetFramework="net471" />
   <package id="ROOT.NET.Graphing" version="5.34.36.13" targetFramework="net471" />
   <package id="Sprache" version="2.1.2" targetFramework="net471" />
+  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net471" />
 </packages>
